[package]
name = "coinflip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alice"
path = "alice/src/main.rs"

[[bin]]
name = "bob"
path = "bob/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.45"
aes = "0.8.2"
rand = "0.8.5"
hex = "0.4.3"
